Refactor support agent and introduce new tools for conversation management
- Moved OpenRouter initialization to a separate provider file for better organization.
- Updated support agent to use a predefined prompt for instructions.
- Created a new RAG (Retrieval-Augmented Generation) instance for enhanced document search capabilities.
- Refactored escalate and resolve conversation tools to remove unnecessary message saving logic.
- Added a new search tool to find relevant documents based on user queries.
- Updated package dependencies to include @ai-sdk/google and @convex-dev/rag.
- Introduced a Dropzone component for file uploads in the UI, utilizing react-dropzone.

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -16,8 +16,10 @@
     "./convex/*": "./convex/*.ts"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.13",
     "@clerk/backend": "^2.12.1",
     "@convex-dev/agent": "^0.2.7",
+    "@convex-dev/rag": "^0.5.2",
     "@openrouter/ai-sdk-provider": "^1.2.0",
     "ai": "^5.0.39",
     "convex": "^1.27.0",
