feat: Add Vapi integration with assistants and phone numbers management
- Implemented VapiAssistantsTab component to display AI assistants.
- Implemented VapiPhoneNumbersTab component to manage phone numbers.
- Created VapiConnectedView component to handle the connected state of Vapi integration.
- Developed VapiView component for managing Vapi plugin configuration and connection.
- Added encryption utilities for secure API key storage.
- Created backend API endpoints for managing Vapi plugins and secrets.
- Updated schema to include new tables for plugins and widget settings.
- Integrated Vapi SDK for phone numbers and assistants retrieval.
- Added necessary dependencies for Vapi integration and UI components.

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -21,6 +21,7 @@
     "@convex-dev/agent": "^0.2.7",
     "@convex-dev/rag": "^0.5.2",
     "@openrouter/ai-sdk-provider": "^1.2.0",
+    "@vapi-ai/server-sdk": "^0.10.1",
     "ai": "^5.0.39",
     "convex": "^1.27.0",
     "convex-helpers": "^0.1.104",
