--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "shiki": "^3.12.2",
+    "sonner": "^2.0.7",
     "zod": "^3.25.76"
   },
   "devDependencies": {
