--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@workspace/backend": "workspace:*",
     "@workspace/ui": "workspace:*",
+    "bowser": "^2.12.1",
     "convex": "^1.27.0",
     "countries-and-timezones": "^3.8.0",
     "date-fns": "^4.1.0",
