--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,6 +25,7 @@
     "ai": "^5.0.39",
     "convex": "^1.27.0",
     "convex-helpers": "^0.1.104",
+    "svix": "^1.76.1",
     "zod": "^3.25.76"
   }
 }
